PyMaker/datas/object2/RawHTML/i11901/Python_DOC_referPages.django-scarface-not-working-in-python-2-7.txt
<div class="post-text" itemprop="text">
<p>My OS is OSX El Capitan.</p>
<p>Versions:</p>
<ul>
<li>Python 2.7.10</li>
<li>Django 1.9.2</li>
<li>Django-Scarface 3.0</li>
</ul>
<p>After I install scarface and add it to the installed apps, it gives this error and i can't run my application.</p>
<pre><code>Unhandled exception in thread started by &lt;function wrapper at 0x1043dbe60&gt;
Traceback (most recent call last):
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/django/utils/autoreload.py", line 226, in wrapper
    fn(*args, **kwargs)
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/django/core/management/commands/runserver.py", line 109, in inner_run
    autoreload.raise_last_exception()
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/django/utils/autoreload.py", line 249, in raise_last_exception
    six.reraise(*_exception)
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/django/utils/autoreload.py", line 226, in wrapper
    fn(*args, **kwargs)
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/django/__init__.py", line 18, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/django/apps/registry.py", line 108, in populate
    app_config.import_models(all_models)
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/django/apps/config.py", line 202, in import_models
    self.models_module = import_module(models_module_name)
  File "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/scarface/models.py", line 7, in &lt;module&gt;
    from scarface.platform_strategy import get_strategies
  File "/Users/mcagataybarin/molocate-dev/env/lib/python2.7/site-packages/scarface/platform_strategy.py", line 38
    class PlatformStrategy(metaclass=ABCMeta):
                                    ^
SyntaxError: invalid syntax
</code></pre>
<p>After I've search for this error, I think that reason is my python version.
Still I'm not sure, therefore I'm asking to you.</p>
<p>Is there any way to fix this? If the reason is really my Python version, how can i update my python version without damaging my code and everything?</p>
</div>
<div class="post-text" itemprop="text">
<p>The problem is related to metaclass syntax change in Python 3.x (<a href="https://docs.python.org/3/whatsnew/3.0.html?highlight=__metaclass__#changed-syntax" rel="nofollow">https://docs.python.org/3/whatsnew/3.0.html?highlight=<strong>metaclass</strong>#changed-syntax</a>), django-scarface is 3.x oriented. I solved the problem (with Python 2.7.x) changing in platform_strategy.py (Line 38) to this: </p>
<pre><code>class PlatformStrategy():
    __metaclass__ = ABCMeta
</code></pre>
<p>I submitted a pull request in github project: <a href="https://github.com/dreipol/django-scarface/pull/11" rel="nofollow">https://github.com/dreipol/django-scarface/pull/11</a></p>
</div>
<div class="post-text" itemprop="text">
<p>In the packaging instructions Python 2.7 is supported <a href="https://github.com/dreipol/django-scarface/blob/master/setup.py#L30" rel="nofollow">https://github.com/dreipol/django-scarface/blob/master/setup.py#L30</a>.</p>
<p>You could run the package tests <a href="https://github.com/dreipol/django-scarface/blob/master/scarface/tests.py" rel="nofollow">https://github.com/dreipol/django-scarface/blob/master/scarface/tests.py</a> inside a virtualenv with Python 2.7.10 to see if they pass. If they don't then there's nothing wrong with your code. If they do pass then the problem might not be in the package itself.</p>
</div>
<span class="comment-copy">After the problem,  I didn't use the scarface and used the boto3 package.  But thank you for your help :)</span>
<span class="comment-copy">I couldn't solve the problem. So I've updated my python version to 3.4.3 and after hours of hours of solving the compatiblity issues, now it finally works :)</span>
<span class="comment-copy">Great! You could submit your issue to Github as a bug if you see it as such, other users of this package might not run into the same issues as you.</span>
